--- a/gerenciador-financeiro/angular.json
+++ b/gerenciador-financeiro/angular.json
@@ -84,6 +84,10 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json",
+            // "proxyConfig": "src/proxy.conf.js"
+          },
           "configurations": {
             "production": {
               "buildTarget": "gerenciador-financeiro:build:production"
