--- a/gerenciador-financeiro/package.json
+++ b/gerenciador-financeiro/package.json
@@ -20,6 +20,7 @@
     "@angular/material": "^20.2.13",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "chart.js": "^4.5.1",
     "ngx-mask": "^20.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
