--- a/gerenciador-financeiro/package.json
+++ b/gerenciador-financeiro/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "run-p start:*",
-    "start:app": "ng serve",
+    "start:app": "ng serve --no-hmr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "start:server": "json-server db.json --watch --delay 500",
